<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/margin_normal"
    app:cardBackgroundColor="?colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_material_text_view"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:alpha="@dimen/material_emphasis_high_type"
            android:text="@string/log_in_using_an_existing_account_or_create_a_new_one"
            android:textColor="?colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@+id/email_material_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_material_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:backgroundTint="?colorSecondary"
            android:text="@string/sign_in_with_email"
            android:textColor="?colorOnSecondary"
            app:icon="@drawable/ic_baseline_email_24"
            app:iconTint="?colorOnSecondary"
            app:layout_constraintBottom_toTopOf="@+id/google_material_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_material_text_view"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_material_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:backgroundTint="?colorOnSurface"
            android:text="@string/sign_in_with_google"
            android:textColor="?colorSurface"
            app:icon="@drawable/fui_ic_googleg_color_24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_material_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>